add video and image display pages

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -34,7 +34,7 @@ layout: default
     </section>
     
     <!-- Features Section -->
-    {% if page.features %}
+    <!-- {% if page.features %}
     <section class="features">
         <div class="wrapper">
             <h2 class="section-title">{{ page.features.title }}</h2>
@@ -51,7 +51,7 @@ layout: default
             </div>
         </div>
     </section>
-    {% endif %}
+    {% endif %} -->
     
     <!-- Recent Projects -->
     {% if page.recent_projects %}
@@ -85,6 +85,8 @@ layout: default
         </div>
     </section>
     {% endif %}
+    
+
     
     <!-- Team Preview -->
     {% if page.team_preview %}
