update and fix bugs

--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -12,7 +12,7 @@ layout: default
                 <p class="contact-hero-subtitle">{{ page.subtitle }}</p>
                 {% endif %}
             </div>
-            <div class="contact-hero-visual">
+            <!-- <div class="contact-hero-visual">
                 <div class="contact-animation">
                     <div class="contact-nodes">
                         <div class="contact-node contact-1"></div>
@@ -22,7 +22,7 @@ layout: default
                         <div class="contact-connection contact-conn-2"></div>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </section>
     
