--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="people-page">
     <!-- Hero Section -->
-    <section class="people-hero">
+    <section class="videos-hero">
         <div class="wrapper">
             <div class="people-hero-content">
                 <h1 class="people-hero-title">{{ page.title }}</h1>
